--- a/lotto/index.html.erb
+++ b/lotto/index.html.erb
@@ -20,6 +20,7 @@
     <p><%=@lotto2%></p>
     <p><%=@lotto3%></p>
     <p><%=@lotto4%></p>
+    <p><%=@lotto5%></p>
     <input type="button" value="새로운번호"><br>
 </body>
 </html>
