--- a/lotto/lotto_html.html.erb
+++ b/lotto/lotto_html.html.erb
@@ -4,35 +4,164 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>로또 번호 추첨기</title>
-    <style>
-        h1{
-            color: honeydew;
-            background: red;
-            text-align: center;
-        }
-        .p_text{font-size:250%; text-align: center;}
-        .button{text-align: center;}
-        .wrapper{
-        width:80px;
-        margin:auto;
+    <title>로또 번호 추첨기 by. dogecoin</title>
+    
+    <script calss="sc">
+		var color = '#';
+		var letters = ['f6c9cc', 'a8c0c0', 'FEBF36', 'FF7238', '6475A0', 'acc7bf', '5e5f67', 'c37070', 'eae160', 'bf7aa3', 'd7d967'];
+		color += letters[Math.floor(Math.random() * letters.length)]; 
+		document.getElementById('wrap').style.background = color;
+	</script>
+    <script>
+    function setDisplayAppreance(self){
+    var body = document.querySelector('body'); 
+    var btn = document.getElementById('btnDisplayMode'); 
+    if(self.value === '다크모드로 전환'){  //다크모드로 전환 버튼을 누른 경우
+      body.style.backgroundColor = 'black';  //배경색 변경
+      body.style.color = 'white'; //css가 적용되지 않은 기본 텍스트 색상 변경
+      btn.style.backgroundColor = "yellow"; //버튼의 배경색 변경
+      btn.style.color = "black"; //버튼의 텍스트 색상 변경
+      self.value = '라이트모드로 전환';
+    } else { //라이트모드로 전환 버튼을 누른 경우
+      body.style.backgroundColor = 'white';
+      body.style.color = 'black';
+      btn.style.backgroundColor = "black";
+      btn.style.color = "white";
+      self.value = '다크모드로 전환';
     }
+  }
     
-    </style>
+    </script>
+    
+<script>
+    //디데이 종료 일자 설정
+var countDownDate = new Date("12 04, 2021 24:00:00").getTime();
+
+//1초마다 갱신되도록 함수 생성,실행 
+var x = setInterval(function() {
+// 오늘 날짜 등록 
+var now = new Date().getTime(); // 현재 날짜의 밀리초 계산
+// 종료일자에서 현재일자를 뺀 시간
+var distance = countDownDate - now;
+// 각 변수에 일, 시, 분, 초를 등록
+var d = Math.floor(distance / (1000 * 60 * 60 * 24));
+var h = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+var m = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+var s = Math.floor((distance % (1000 * 60)) / 1000);
+
+if(d === 0) {
+d = "DAY";
+}
+
+// 화면에 삽입
+document.getElementById("d-day").innerHTML = "다음 로또 추첨까지: " + d +"일 " + h + "시간 " + m + "분 " + s + "초 남았습니다.";
+
+}, 1000);
+    
+</script>
+
 </head>
-<body>
-    <h1>로또 번호 추첨기</h1>
-    <hr width = "100%" align="left">
+    <body>
+    <h1>로또추첨사이트</h1>
+    <div><h1 id="d-day"></h1></div>
+    <input id="btnDisplayMode" class="btn" type="button" value="다크모드로 전환" onclick="setDisplayAppreance(this);">
     
-    <div class ="p_text">
-    <p><%=@lotto1%></p>
-    <p><%=@lotto2%></p>
-    <p><%=@lotto3%></p>
-    <p><%=@lotto4%></p>
-    <p><%=@lotto5%></p>        
-    </div>
-    <div class ="wrapper"> 
-    <button onClick = "window.location.reload()">새로운 번호</button>  <!-버튼을 누르면 새로고침 되면서 새로운 번호가 출력->
-    </div>
+    <hr width = "100%" align="left">
+    <div>    
+
+    <table>
+		<tr>
+			<td>
+            <div class="len1"><%=@lotto1[0]%></div>
+            <div class="len2"><%=@lotto1[1]%></div>
+            <div class="len3"><%=@lotto1[2]%></div>
+            <div class="len4"><%=@lotto1[3]%></div>
+            <div class="len5"><%=@lotto1[4]%></div>
+            <div class="len6"><%=@lotto1[5]%></div>
+			<div class="len7">+</div>	
+            <div class="len8"><%=@lotto1[6]%></div>
+			</td>
+		</tr>
+		<tr>
+			<td>
+            <div class="len1"><%=@lotto2[0]%></div>
+            <div class="len2"><%=@lotto2[1]%></div>
+            <div class="len3"><%=@lotto2[2]%></div>
+            <div class="len4"><%=@lotto2[3]%></div>
+            <div class="len5"><%=@lotto2[4]%></div>
+            <div class="len6"><%=@lotto2[5]%></div>
+			<div class="len7">+</div>
+            <div class="len8"><%=@lotto2[6]%></div>
+			</td>
+		</tr>
+		<tr>
+			<td>
+            <div class="len1"><%=@lotto3[0]%></div>
+            <div class="len2"><%=@lotto3[1]%></div>
+            <div class="len3"><%=@lotto3[2]%></div>
+            <div class="len4"><%=@lotto3[3]%></div>
+            <div class="len5"><%=@lotto3[4]%></div>
+            <div class="len6"><%=@lotto3[5]%></div>
+			<div class="len7">+</div>
+            <div class="len8"><%=@lotto3[6]%></div>
+			</td>
+		</tr>
+		<tr>
+			<td>
+            <div class="len1"><%=@lotto4[0]%></div>
+            <div class="len2"><%=@lotto4[1]%></div>
+            <div class="len3"><%=@lotto4[2]%></div>
+            <div class="len4"><%=@lotto4[3]%></div>
+            <div class="len5"><%=@lotto4[4]%></div>
+            <div class="len6"><%=@lotto4[5]%></div>
+			<div class="len7">+</div>
+            <div class="len8"><%=@lotto4[6]%></div>
+			</td>
+		</tr>
+		<tr>
+			<td>
+            <div class="len1"><%=@lotto5[0]%></div>
+            <div class="len2"><%=@lotto5[1]%></div>
+            <div class="len3"><%=@lotto5[2]%></div>
+            <div class="len4"><%=@lotto5[3]%></div>
+            <div class="len5"><%=@lotto5[4]%></div>
+            <div class="len6"><%=@lotto5[5]%></div>
+			<div class="len7">+</div>
+            <div class="len8"><%=@lotto5[6]%></div>
+			</td>
+		</tr><br>
+        </table>
+
+        <div class ="wrapper">
+        <button onClick = "window.location.reload()">새로운 번호</button>  <!-버튼을 누르면 새로고침 되면서 새로운 번호가 출력->
+        </div>
+        </div>
+<hr width = "100%" align="left">
+<div>
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_69044"></div>
+  <div class="tradingview-widget-copyright">TradingView 제공 <a href="https://kr.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener" target="_blank"><span class="blue-text">AAPL 차트</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "width": 1000,
+  "height": 700,
+  "symbol": "NASDAQ:AAPL",
+  "interval": "D",
+  "timezone": "Asia/Seoul",
+  "theme": "dark",
+  "style": "1",
+  "locale": "kr",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "container_id": "tradingview_69044"
+}
+  );
+  </script>
+</div>
+</div>
 </body>
 </html>
