--- a/lotto/lotto.scss
+++ b/lotto/lotto.scss
@@ -1,137 +1,158 @@
-		h1{
-	       text-align: center;
-		   color:red;
-		   
-		}
-        
-        .day{
-	       text-align: center;
-           color:red;
+/*#######################################################################################
+    *프로그램명: 로또 추첨기능.css
+    *소스파일명: lotto.scss
+    *작성자: 장승배
+    *버전: 1.0.0
+    *생성자: 장승배
+    *생성일자: 2021.10.20ㄴ
+    *최종수정일자: 2021.11.30
+    *최종수정자: 장승배
+    *최종수정내용: 주석의 추가 + btn1, btn2, bt3 생성됨
+    --------------------------------------------------------------------------------------
+    *내용: html에 적용되어 있는 디자인이 적용되어 있는 파일
+    *추가요구사항: 사이트의 디자인이 너무 구리다 예쁘게좀 해줬으면 좋갰다.
+
+###########################################################################################*/
+
+
+
+
+h1{                              
+    text-align: center;            /*h1태그를 중앙정렬*/
+	color:red;                     /*h1태그의 글자색을 RED로 해라*/
+    }
+
+table {
+      margin-left:auto;            /*테이블 태그를 중앙 정렬*/
+      margin-right:auto;
+      }
+
+.len1{
+      float: left;
+      border: solid #000;
+      width: 75px;
+      height: 75px;
+      text-align: center;
+      line-height: 70px;
+      border-radius: 50%;
+      font-size: 40px;
+      background-color: yellow;
+      }
+
+.len2{
+      float: left;
+      border: solid #000;
+      width: 75px;
+      height: 75px;
+      text-align: center;
+      line-height: 70px;
+      border-radius: 50%;
+      font-size:40px;
+      background-color: aquamarine;
         }
 
-        .len1{
-            float: left;
-            border: solid #000;
-            width: 75px;
-            height: 75px;
-            text-align: center;
-            line-height: 70px;
-            border-radius: 50%;
-            font-size: 40px;
-            background-color: yellow;
-        }
-        .len2{
-            float: left;
-            border: solid #000;
-            width: 75px;
-            height: 75px;
-            text-align: center;
-            line-height: 70px;
-            border-radius: 50%;
-            font-size:40px;
-            background-color: aquamarine;
-        }
-        .len3{
-            float: left;
-            border: solid #000;
-            width: 75px;
-            height: 75px;
-            text-align: center;
-            line-height: 75px;
-            border-radius: 50%;
-            font-size: 40px;
-            background-color: chocolate;
-        }
-        .len4{
-            float: left;
-            border: solid #000;
-            width: 75px;
-            height: 75px;
-            text-align: center;
-            line-height: 70px;
-            border-radius: 50%;
-            font-size: 40px;
-            background-color: cyan;
-        }
-        .len5{
-            float: left;
-            border: solid #000;
-            width: 75px;
-            height: 75px;
-            text-align: center;
-            line-height: 70px;
-            border-radius: 50%;
-            font-size: 40px;
-            background-color: lightsalmon;}
-        .len6{
-            float: left;
-            border: solid #000;
-            width: 75px;
-            height: 75px;
-            text-align: center;
-            line-height: 70px;
-            border-radius: 50%;
-            font-size: 40px;
-            background-color: turquoise;
-        }
-        .len7{
-            float: left;
-            border: solid #000;
-            width: 75px;
-            height: 75px;
-            text-align: center;
-            line-height: 70px;
-            border-radius: 50%;
-            font-size: 40px;
-            background-color: lightgreen;
-        }
-		.len8{
-			float: left;
-            border: solid #000;
-            width: 75px;
-            height: 75px;
-            text-align: center;
-            line-height: 70px;
-            border-radius: 50%;
-            font-size: 40px;
-            background-color: pink;
-		}
-        
-        
-        
-        .p_text{font-size:250%; text-align: center;
-                position: absolute;
-                left: 50%;
-                transform: translateX(-50%);
+.len3{
+      float: left;
+      border: solid #000;
+      width: 75px;
+      height: 75px;
+      text-align: center;
+      line-height: 75px;
+      border-radius: 50%;
+      font-size: 40px;
+      background-color: chocolate;
+      }
+
+.len4{
+      float: left;
+      border: solid #000;
+      width: 75px;
+      height: 75px;
+      text-align: center;
+      line-height: 70px;
+      border-radius: 50%;
+      font-size: 40px;
+      background-color: cyan;
+      }
+
+.len5{
+      float: left;
+      border: solid #000;
+      width: 75px;
+      height: 75px;
+      text-align: center;
+      line-height: 70px;
+      border-radius: 50%;
+      font-size: 40px;
+      background-color: lightsalmon;
+      }
+
+.len6{
+      float: left;
+      border: solid #000;
+      width: 75px;
+      height: 75px;
+      text-align: center;
+      line-height: 70px;
+      border-radius: 50%;
+      font-size: 40px;
+      background-color: turquoise;
+      }
+
+.len7{
+      float: left;
+      border: solid #000;
+      width: 75px;
+      height: 75px;
+      text-align: center;
+      line-height: 70px;
+      border-radius: 50%;
+      font-size: 40px;
+      background-color: lightgreen;
+      }
+
+.len8{
+	 float: left;
+     border: solid #000;
+     width: 75px;
+     height: 75px;
+     text-align: center;
+     line-height: 70px;
+     border-radius: 50%;
+     font-size: 40px;
+     background-color: pink;
+	 }
+
+.btn1{                       
+        text-align: center;
+                                        /*div에  싸여 있는  새로운번호 버튼 중앙정렬*/
         }
 
-        .button{text-align: center;
-        }
-        .wrapper{font-size:150%; text-align: center;
-        }
-        
-        .sc{
-			float:right;
-			
-		}
-        table {
-            margin-left:auto; 
-            margin-right:auto;
-        }
-        
-        /*다크모드 css*/
-        .btn {  
-            float: right;
-            width: 200px;
-            height: 50px;
-            border-radius: 50px;
-            font-size: 15px;
-            text-align: center;
-            background-color: black;
-            color: white;
-            margin-top: 20px;
-            border: 1px solid gray;
-              }
+.btn3{                                  /*새로운 번호를 생성하는 버튼의 디자인*/
+      width: 200px;
+      height: 50px;
+      border-radius: 50px;
+      font-size: 15px;
+      text-align: center;
+      background-color: black;
+      color: white;
+      margin-top: 20px;
+      border: 1px solid gray;
+      text-align: center;
+    }
+
+.btn2{                                   /*다크모드 디자인*/
+      float: right;
+      width: 200px;
+      height: 50px;
+      border-radius: 50px;
+      font-size: 15px;
+      text-align: center;
+      background-color: black;
+      color: white;
+      margin-top: 20px;
+      border: 1px solid gray;
+      }
 
         
   
