--- a/lotto/lotto.scss
+++ b/lotto/lotto.scss
@@ -4,8 +4,8 @@
     *작성자: 장승배
     *버전: 1.0.0
     *생성자: 장승배
-    *생성일자: 2021.10.20ㄴ
-    *최종수정일자: 2021.11.30
+    *생성일자: 2021.10.20
+    *최종수정일자: 2021.12.04
     *최종수정자: 장승배
     *최종수정내용: 주석의 추가 + btn1, btn2, bt3 생성됨
     --------------------------------------------------------------------------------------
@@ -16,10 +16,16 @@
 
 
 
+body{
+    background-color:  #F4F8C4;
+    width: 960px;
+    margin: 0 auto;
+    }
 
 h1{                              
-    text-align: center;            /*h1태그를 중앙정렬*/
-	color:red;                     /*h1태그의 글자색을 RED로 해라*/
+                                        /*h1태그를 중앙정렬*/
+	color: #3EF11B;                     /*h1태그의 글자색을 RED로 해라*/
+    font-family: '맑은 고딕' 'Malgun Gothic', Gotnic, sans-serif;
     }
 
 table {
@@ -27,7 +33,7 @@ table {
       margin-right:auto;
       }
 
-.len1{
+.len1{                            /*노란색 공의 디자인*/
       float: left;
       border: solid #000;
       width: 75px;
@@ -36,10 +42,10 @@ table {
       line-height: 70px;
       border-radius: 50%;
       font-size: 40px;
-      background-color: yellow;
+      background-color: #FFEF4D;
       }
 
-.len2{
+.len2{                            /*빨간색 공의 디자인*/
       float: left;
       border: solid #000;
       width: 75px;
@@ -48,10 +54,10 @@ table {
       line-height: 70px;
       border-radius: 50%;
       font-size:40px;
-      background-color: aquamarine;
+      background-color: #EE2E1E;
         }
 
-.len3{
+.len3{                            /*파란색 공의 디자인*/
       float: left;
       border: solid #000;
       width: 75px;
@@ -60,10 +66,10 @@ table {
       line-height: 75px;
       border-radius: 50%;
       font-size: 40px;
-      background-color: chocolate;
+      background-color: #1381EE;
       }
 
-.len4{
+.len4{                           /*검은색*/
       float: left;
       border: solid #000;
       width: 75px;
@@ -72,56 +78,10 @@ table {
       line-height: 70px;
       border-radius: 50%;
       font-size: 40px;
-      background-color: cyan;
+      background-color: #6B7178;
       }
 
-.len5{
-      float: left;
-      border: solid #000;
-      width: 75px;
-      height: 75px;
-      text-align: center;
-      line-height: 70px;
-      border-radius: 50%;
-      font-size: 40px;
-      background-color: lightsalmon;
-      }
 
-.len6{
-      float: left;
-      border: solid #000;
-      width: 75px;
-      height: 75px;
-      text-align: center;
-      line-height: 70px;
-      border-radius: 50%;
-      font-size: 40px;
-      background-color: turquoise;
-      }
-
-.len7{
-      float: left;
-      border: solid #000;
-      width: 75px;
-      height: 75px;
-      text-align: center;
-      line-height: 70px;
-      border-radius: 50%;
-      font-size: 40px;
-      background-color: lightgreen;
-      }
-
-.len8{
-	 float: left;
-     border: solid #000;
-     width: 75px;
-     height: 75px;
-     text-align: center;
-     line-height: 70px;
-     border-radius: 50%;
-     font-size: 40px;
-     background-color: pink;
-	 }
 
 .btn1{                       
         text-align: center;
@@ -154,5 +114,38 @@ table {
       border: 1px solid gray;
       }
 
-        
+input:checked + label{
+              color: #4A7FFB;
+              border: 1px solid #ddd;
+              border-top: 2px solid #2e9cdf;
+              
+              color: #3EF11B;
+         
+              
+    }
+
+        #tab1:checked ~ #content1,
+        #tab2:checked ~ #content2, {
+            display: block;}
+
+section {
+            display: none;
+            padding: 20px 0 0;
+            border-top: 1px solid #4A7FFB;} //기능을 탭으로 나눌수 있게 도와주는 css
+
+        /*라디오버튼 숨김*/
+.as {
+    display: none;
+                    }
+    label {
+            display: inline-block;
+            margin: 0 0 -1px;
+            padding: 15px 25px;
+            font-weight: 600;
+            text-align: center;
+            
+            border: 1px solid transparent;}
+.lo{
+    color : #4A7FFB;
+}
   
