--- a/lotto/lotto_html.html.erb
+++ b/lotto/lotto_html.html.erb
@@ -5,13 +5,15 @@
     *버전: 1.0.0
     *생성자: 장승배
     *생성일자: 2021.10.20
-    *최종수정일자: 2021.11.30
+    *최종수정일자: 2021.12.04
     *최종수정자: 장승배
     *최종수정내용: 주석의 추가
     --------------------------------------------------------------------------------------
     *내용:html과 자바스크립트 로 작성된 로또 사이트의 전체적인 모습 코드
     *추가 요구사항: 전체적인 코드의 설명 추가 와 다크모드의 수정 했으면 좋겠다. 
                   버튼을 새로 고침이 아닌 새로운 방법으로 만들었으면 좋겠음
+                - 코드에 대한 전체적인 설명 + 누가 언제 만들었는지를 표시하라 + 코드가 중구 난방한 주묵구구식이니 수정하라.
+                - 다크모드 적용시 글자 안바뀌는 문제도 수정해라 + 눈에 편한 색으로 바꿨으면 좋겠다.
 
 #################################################################################################-->
 
@@ -61,7 +63,7 @@
     </script>
     
     <!--시간에 따른 다크모드 -->
-    <script>
+   <script>
     var date = new Date();
     var hour = date.getHours();
         
@@ -91,7 +93,7 @@
 #####################################################################################################-->
 <script>
     
-    var countDownDate = new Date("12 04, 2021 18:00:00").getTime();                    //D-DAY 종료일 지정
+    var countDownDate = new Date("12 11, 2021 18:00:00").getTime();                    //D-DAY 종료일 지정
 
     //1초마다 갱신되도록 함수 생성,실행 
     var x = setInterval(function() {                                                
@@ -115,116 +117,84 @@
 </script>
 
 </head>
-    <body>
-<!--################################################################################################################
-    *프로그램명: 로또추첨 사이트 HTML 부
-    *작성자: 장승배
-    *버전: 1.0.0
-    *생성자: 장승배
-    *생성일자: 2021.10.20
-    *최종수정일자: 2021.11.30
-    *최종수정자: 장승배
-    *최종수정내용: 주석의 추가 + 버튼을 input 태그로 변경
-    --------------------------------------------------------------------------------------
-    *내용: 로또 추첨 사이트 의 모든 부분이 화면에 출력 되는 html 부분
-    *추가요구사항: 버튼을 새로 고침이 아닌 새로운 방법으로 만들었으면 좋겠음
-
-####################################################################################################################-->       
-        
+    <body>      
     <h1>로또추첨사이트</h1>
     <div><h1 id="d-day"></h1></div>
     <input id="btnDisplayMode" class="btn2" type="button" value="다크모드로 전환" onclick="setDisplayAppreance(this);">
     
-    <hr width = "100%" align="left">
-    <div>    
+    
+        
+<!--###########-->
+<div class="main">
+   <input id="tab1" type="radio" name="tabs" checked class="as"> <!--디폴트 메뉴-->
+    <label for="tab1" calss ="bs"><p class ="lo">로또 추첨</p></label>
 
+    <input id="tab2" type="radio" name="tabs" class="as">
+    <label for="tab2" calss ="bs"><p class ="lo">주식 차트</p></label>
+
+<!--###########################################################################################################################-->
+    <section id="content1">
     <table>
 		<tr>
 			<td>
-            <div class="len1"><%=@lotto1[0]%></div>
-            <div class="len2"><%=@lotto1[1]%></div>
-            <div class="len3"><%=@lotto1[2]%></div>
-            <div class="len4"><%=@lotto1[3]%></div>
-            <div class="len5"><%=@lotto1[4]%></div>
-            <div class="len6"><%=@lotto1[5]%></div>
-			<div class="len7">+</div>	
-            <div class="len8"><%=@lotto1[6]%></div>
+            <div class="len1"><%=@lotto_yellow1[0]%></div>
+            <div class="len1"><%=@lotto_yellow1[1]%></div>
+            <div class="len2"><%=@lotto_red1[0]%></div>
+            <div class="len3"><%=@lotto_green1[0]%></div>
+            <div class="len4"><%=@lotto_number1[0]%></div>
+            <div class="len4"><%=@lotto_number1[1]%></div>
 			</td>
 		</tr>
 		<tr>
 			<td>
-            <div class="len1"><%=@lotto2[0]%></div>
-            <div class="len2"><%=@lotto2[1]%></div>
-            <div class="len3"><%=@lotto2[2]%></div>
-            <div class="len4"><%=@lotto2[3]%></div>
-            <div class="len5"><%=@lotto2[4]%></div>
-            <div class="len6"><%=@lotto2[5]%></div>
-			<div class="len7">+</div>
-            <div class="len8"><%=@lotto2[6]%></div>
+            <div class="len1"><%=@lotto_yellow2[0]%></div>
+            <div class="len1"><%=@lotto_yellow2[1]%></div>
+            <div class="len2"><%=@lotto_red2[0]%></div>
+            <div class="len3"><%=@lotto_green2[0]%></div>
+            <div class="len4"><%=@lotto_number2[0]%></div>
+            <div class="len4"><%=@lotto_number2[1]%></div>
 			</td>
 		</tr>
 		<tr>
 			<td>
-            <div class="len1"><%=@lotto3[0]%></div>
-            <div class="len2"><%=@lotto3[1]%></div>
-            <div class="len3"><%=@lotto3[2]%></div>
-            <div class="len4"><%=@lotto3[3]%></div>
-            <div class="len5"><%=@lotto3[4]%></div>
-            <div class="len6"><%=@lotto3[5]%></div>
-			<div class="len7">+</div>
-            <div class="len8"><%=@lotto3[6]%></div>
+            <div class="len1"><%=@lotto_yellow3[0]%></div>
+            <div class="len1"><%=@lotto_yellow3[1]%></div>
+            <div class="len2"><%=@lotto_red3[0]%></div>
+            <div class="len3"><%=@lotto_green3[0]%></div>
+            <div class="len4"><%=@lotto_number3[0]%></div>
+            <div class="len4"><%=@lotto_number3[1]%></div>
+            </td>
+		</tr>
+		<tr>
+			<td>
+            <div class="len1"><%=@lotto_yellow4[0]%></div>
+            <div class="len1"><%=@lotto_yellow4[1]%></div>
+            <div class="len2"><%=@lotto_red4[0]%></div>
+            <div class="len3"><%=@lotto_green4[0]%></div>
+            <div class="len4"><%=@lotto_number4[0]%></div>
+            <div class="len4"><%=@lotto_number4[1]%></div>
 			</td>
 		</tr>
 		<tr>
 			<td>
-            <div class="len1"><%=@lotto4[0]%></div>
-            <div class="len2"><%=@lotto4[1]%></div>
-            <div class="len3"><%=@lotto4[2]%></div>
-            <div class="len4"><%=@lotto4[3]%></div>
-            <div class="len5"><%=@lotto4[4]%></div>
-            <div class="len6"><%=@lotto4[5]%></div>
-			<div class="len7">+</div>
-            <div class="len8"><%=@lotto4[6]%></div>
-			</td>
-		</tr>
-		<tr>
-			<td>
-            <div class="len1"><%=@lotto5[0]%></div>
-            <div class="len2"><%=@lotto5[1]%></div>
-            <div class="len3"><%=@lotto5[2]%></div>
-            <div class="len4"><%=@lotto5[3]%></div>
-            <div class="len5"><%=@lotto5[4]%></div>
-            <div class="len6"><%=@lotto5[5]%></div>
-			<div class="len7">+</div>
-            <div class="len8"><%=@lotto5[6]%></div>
+            <div class="len1"><%=@lotto_yellow5[0]%></div>
+            <div class="len1"><%=@lotto_yellow5[1]%></div>
+            <div class="len2"><%=@lotto_red5[0]%></div>
+            <div class="len3"><%=@lotto_green5[0]%></div>
+            <div class="len4"><%=@lotto_number5[0]%></div>
+            <div class="len4"><%=@lotto_number5[1]%></div>
 			</td>
 		</tr><br>
         </table>
-        <div class ="btn1">
+    
+       <div class ="btn1">
         <input  class="btn3" type="button" value="새로운번호" onclick="window.location.reload();">                              
         </div>
-        </div>
         
-        
-
-<!--###############################################################################################
-    *프로그램명: 화면 주식창 출력 
-    *작성자: 양성부
-    *버전: 1.0.0
-    *생성자: 장승배
-    *생성일자: 2021.11.25
-    *최종수정일자: 2021.11.30
-    *최종수정자: 양성부
-    *최종수정내용: 주석 추가
-    --------------------------------------------------------------------------------------
-    *내용: 화면 주식창 출력
-    *추가요구사항: 
-    
-    *출처: https://kr.tradingview.com/symbols/NASDAQ-AAPL  [TradingView 제공]
-
-#####################################################################################################-->
-<hr width = "100%" align="left">
-<div>
+    </section>
+<!--###########################################################################################################################-->
+    <section id="content2">
+    <div>
 <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div id="tradingview_69044"></div>
@@ -250,5 +220,15 @@
   </script>
 </div>
 </div>
+    </section>
+</div>      
+<!--################################################################################################################################-->        
+<hr width = "100%" align="left">
+    <div>
+        <div>
+          <div id="tradingview_69044"></div>
+          <div class="tradingview-widget-copyright">TradingView 제공 <a href="https://kr.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener" target="_blank"><span class="blue-text">AAPL 차트</span></a></div>
+        </div>
+    </div>
 </body>
 </html>
