--- a/lotto/lotto.scss
+++ b/lotto/lotto.scss
@@ -6,8 +6,8 @@
     *생성자: 장승배
     *생성일자: 2021.10.20
     *최종수정일자: 2021.12.04
-    *최종수정자: 장승배
-    *최종수정내용: 주석의 추가 + btn1, btn2, bt3 생성됨
+    *최종수정자: 유형주
+    *최종수정내용: 주석의 추가 + 틀디자인 + 탭디자인 +  공과 주식차트 나누는 기능추가 + 라디오버튼디자인
     --------------------------------------------------------------------------------------
     *내용: html에 적용되어 있는 디자인이 적용되어 있는 파일
     *추가요구사항: 사이트의 디자인이 너무 구리다 예쁘게좀 해줬으면 좋갰다.
@@ -17,23 +17,22 @@
 
 
 body{
-    background-color:  #F4F8C4;
-    width: 960px;
+    width: 960px;  /*틀 디자인*/
     margin: 0 auto;
     }
 
 h1{                              
                                         /*h1태그를 중앙정렬*/
-	color: #3EF11B;                     /*h1태그의 글자색을 RED로 해라*/
+	color: #4A7FFB;                     /*h1태그의 글자색을 RED로 해라*/
     font-family: '맑은 고딕' 'Malgun Gothic', Gotnic, sans-serif;
     }
 
 table {
-      margin-left:auto;            /*테이블 태그를 중앙 정렬*/
-      margin-right:auto;
+       margin-left:auto;            /*테이블 태그를 중앙 정렬*/
+       margin-right:auto;
       }
 
-.len1{                            /*노란색 공의 디자인*/
+.lottery_ball_1{                            /*노란색 공의 디자인*/
       float: left;
       border: solid #000;
       width: 75px;
@@ -45,7 +44,7 @@ table {
       background-color: #FFEF4D;
       }
 
-.len2{                            /*빨간색 공의 디자인*/
+.lottery_ball_2{                            /*빨간색 공의 디자인*/
       float: left;
       border: solid #000;
       width: 75px;
@@ -57,7 +56,7 @@ table {
       background-color: #EE2E1E;
         }
 
-.len3{                            /*파란색 공의 디자인*/
+.lottery_ball_3{                            /*파란색 공의 디자인*/
       float: left;
       border: solid #000;
       width: 75px;
@@ -69,7 +68,7 @@ table {
       background-color: #1381EE;
       }
 
-.len4{                           /*검은색*/
+.lottery_ball_4{                           /*검은색*/
       float: left;
       border: solid #000;
       width: 75px;
@@ -78,7 +77,7 @@ table {
       line-height: 70px;
       border-radius: 50%;
       font-size: 40px;
-      background-color: #6B7178;
+      background-color: #FF00FF;
       }
 
 
@@ -97,6 +96,7 @@ table {
       background-color: black;
       color: white;
       margin-top: 20px;
+	margin-bottom: 20px;
       border: 1px solid gray;
       text-align: center;
     }
@@ -114,7 +114,7 @@ table {
       border: 1px solid gray;
       }
 
-input:checked + label{
+input:checked + label{              /*탭 디자인 */
               color: #4A7FFB;
               border: 1px solid #ddd;
               border-top: 2px solid #2e9cdf;
@@ -131,21 +131,22 @@ input:checked + label{
 section {
             display: none;
             padding: 20px 0 0;
-            border-top: 1px solid #4A7FFB;} //기능을 탭으로 나눌수 있게 도와주는 css
+            border-top: 1px solid #4A7FFB;} //로또 공과 주식차트를 나누어주는 css
 
-        /*라디오버튼 숨김*/
-.as {
+        
+.tab_letter { /*라디오버튼 동그라미 숨기기*/
     display: none;
                     }
-    label {
+    label { /*라디오버튼 라벨 디자인*/
             display: inline-block;
-            margin: 0 0 -1px;
-            padding: 15px 25px;
-            font-weight: 600;
-            text-align: center;
-            
-            border: 1px solid transparent;}
-.lo{
-    color : #4A7FFB;
+            margin: 0 0 0px; /*상하좌우 여백없음, 라벨과 줄사이 여백없음*/
+            padding: 15px 25px; /*글자 상하좌우 여백*/
+            font-weight: 600;   /*글자 굵기*/
+            text-align: center; /*글자 가운데 정렬*/
+            border: 1px solid transparent;}/*네모박스 둘레  투명하게 처리*/
+.tab_color{
+    color : #4A7FFB; /*탭 글자 색상*/
 }
-  
+.a2{
+    text-align: right; /*다크모드 버튼 오른쪽으로 정렬*/
+}
